modified:   .env #	modified:   .env.example #	modified:   app.js #	modified:   database/connection.js #	modified:   package.json #	modified:   server.js #	modified:   src/controllers/accountController.js #	modified:   src/controllers/authController.js #	modified:   src/models/Account.js #	modified:   src/models/User.js #	modified:   src/routes/accountRoutes.js #	modified:   src/routes/authRoutes.js #	modified:   src/services/accountService.js #	modified:   src/services/authService.js #	modified:   tests/authController.test.js #	modified:   tests/authService.test.js #	new file:   tests/test_20.txt

--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 # Database Configuration
 DB_HOST=localhost
+# DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=banking_system
 DB_USERNAME=root
-DB_PASSWORD=letmein
+DB_PASSWORD=1234
 
 # Server Configuration
 PORT=3000
